--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-c++/VZ01/* linguist-vendored
-c++/VZ02/docs/* linguist-vendored
-c++/VZ03/docs/* linguist-vendored
-java/docs/* linguist-vendored
+C++/VZ01/* linguist-vendored
+C++/VZ02/docs/* linguist-vendored
+C++/VZ03/docs/* linguist-vendored
+Java/docs/* linguist-vendored
